[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/train_highway_junction_straight.svg" type="Texture" id=1]
[ext_resource path="res://assets/tool_bg_select.svg" type="Texture" id=2]
[ext_resource path="res://assets/tool_bg.svg" type="Texture" id=3]
[ext_resource path="res://scripts/ClickableTool.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="ClickableTool" type="Area2D"]
script = ExtResource( 5 )
icon_texture = ExtResource( 1 )

[node name="ToolBG" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="ToolIcon" type="Sprite" parent="ToolBG"]

[node name="ToolSelectBG" type="Sprite" parent="ToolBG"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )
